added text to conclusion chapter

--- a/main.tex
+++ b/main.tex
@@ -768,7 +768,8 @@ Considering first of all the results obtained in table \ref{bbb}, one must not b
 
 The emerging patterns among synapses strenght are of particular interest. Unlike in the case of more traditional, backpropagation based networks, they are interpretable by the human eye as similar to prototypes of the input samples, their utility goes beyond that. A common occurrence observed (see figure \ref{heatmap}) is a positive digit surrounded by a negative border, a common practice among human designed networks that reduces the possibility of confusion between digits. Another observed behavior is a set of hidden neuron synapses in wich it is possible to recognize two numbers: one "drawn" in positive synapses strenghts, and the other in negative. These values might reveal very useful in distinguishing between two classes of digits, as they respond with a positive activation for one digit and a negative one for the other.
 
-The modification that gave us one of the most interesting result is switching off explicit anti-hebbian learning. First off, note that there still is a competition between patterns, as only the most activated one gets reinforced at all, but every neuron is still bound by the fact that every set of synapses must converge to a sphere.
+The modification that gave us one of the most interesting result is switching off explicit anti-hebbian learning. First off, note that there still is a competition between patterns, as only the most activated one gets reinforced at all, but every neuron is still bound by the fact that every set of synapses must converge to a sphere. All the synapses are now positive, as it is to be expected from the positive reinforcement of our model. They also resemble only prototypes of the training database. We lose the negative border effect and the superimposition of two digits previously discussed. However, we can more easily recognize the digits prototypes.  A characteristic of these positive patterns is also consistency, as they presented themselves in the two modifications of the model inspired to BCM learning, the one with exponential over-time decay of weights and the one with multiple neurons reinforced. Also, varying the hyperparameters of this model did not changed the existing pattern by a significant amount. We did not observe a significant change in accuracy either, however we know from the paper by Hopfield and Krotov that when working with their increased number of epochs and hidden neurons the difference is significative (switching off anti-hebbian learning lowers the accuracy from 98.54\% to 97.98\%).
+
 \chapter{Acknowledgements}
 This document is the culmination of five years of work. It was written thanks to the support of these people.
 
