--- a/main.tex
+++ b/main.tex
@@ -18,7 +18,8 @@
 \textwidth=450pt\oddsidemargin=0pt
 \graphicspath{{img/}}
 \DeclareGraphicsExtensions{.pdf,.jpeg,.png, .gif}
-\title{A competing hidden units neural network model study}
+\title{Impact of inter-synaptic competition on the learning dynamics of a
+biologically-inspired neural network}
 \author{Alessandro Dal Maso}
 \date{March 1 2021}
 \begin{document}
@@ -55,7 +56,7 @@ Academic year{ 2019/2020}
 \end{center}
 \end{titlepage}
 \begin{abstract}
-In 2019, a paper by Dimitry Krotov and John J. Hopfield evidences a new model of neural network based on unsupervised learning trough competing hidden units. I reproduced the model, analyzing its behavior under various variations from the original, quantifying its prediction accuracy working in conjunction with three different supervised algorithms used for classification purposes: a random forest, a supervised neural network and a support vector machine. The task on which the neural network was used is the classification of digits of the MNIST database. An accuracy of about 92\% correct guesses on a test data set was achieved by the network.
+In 2019, a paper by Dimitry Krotov and John J. Hopfield evidences a new model of neural network based on unsupervised learning trough competing hidden units. The main characteristics I reproduced the model, analysing its behaviour under various variations from the original, quantifying its prediction accuracy working in conjunction with three different supervised algorithms used for classification purposes: a random forest, a supervised neural network and a support vector machine. The task on which the neural network was used is the classification of digits of the MNIST database. An accuracy of about 92\% correct guesses on a test data set was achieved by the network.
 \todo[inline]{estendere}
 
 \end{abstract}
@@ -65,7 +66,7 @@ In 2019, a paper by Dimitry Krotov and John J. Hopfield evidences a new model of
 
 \chapter{Introduction}
 \section{Classification}
-The problem of classification has been studied since the beginnings of the field of study of pattern recognition. It consists in finding a certain algorithm that allows a machine to classify a set of data among a certain number of classes. Applications are, as one can imagine, widespread: from allowing computers to recognize handwriting, to the automation of transport systems, to the labeling of the huge amount of data produced in modern day scientific experiment. In general, the last 20 years have seen a growing number of fields in wich a large quantity of digital data is available, the so called "big data"field. For a long time, human capabilities in this field vastly surpassed those of automated systems; In tackling this problem, we open the possibility of many more applications that traditionally were not thought as  tasks for computers.
+The problem of classification has been studied since the beginnings of the field of study of pattern recognition. It consists in finding a certain algorithm that allows a machine to classify a set of data among a certain number of classes. Applications are, as one can imagine, widespread: from allowing computers to recognize handwriting, to the automation of transport systems, to the labelling of the huge amount of data produced in modern day scientific experiment. In general, the last 20 years have seen a growing number of fields in wich a large quantity of digital data is available, the so called "big data"field. For a long time, human capabilities in this field vastly surpassed those of automated systems; In tackling this problem, we open the possibility of many more applications that traditionally were not thought as  tasks for computers.
 
 In some cases, no set of classes is given: instead the task consist in separating the data among an \textit{a priori} unknown number of classes whose members share similar features. Again, applications are widespread: from marketing algorithms to medical data, to finance. The possibility here is not just to delegate to computers a task that would be costly and time consuming to humans, but to investigate new patterns that would be inherently incomprehensible to humans.
 
