added explanation text in exponential decay section

--- a/main.tex
+++ b/main.tex
@@ -599,6 +599,8 @@ The algorithm performed worse with this modification, as we can see in table \re
 \caption{Visual representation of the learned weights, with exponential decay over time.}
 \end{figure}
 
+This modification follows BCM, the visual cortex theory developed in 1981.
+
 \subsection{Exponential decay over time: visual observations}
 
 \begin{itemize}
