corrected the title

--- a/main.tex
+++ b/main.tex
@@ -34,7 +34,7 @@ Master Degree in Physics}}
 \end{center}
 \vspace{23mm}
 \begin{center}{
-{\LARGE{\bf A competing hidden units neural network model study}}\\
+{\LARGE{\bf Impact of inter-synaptic competition on the learning dynamics of a biologically-inspired neural network}}\\
 }\end{center}
 \vspace{50mm} \par \noindent
 \begin{minipage}[t]{0.47\textwidth}
